syntax = "proto3";

import "domain/weatherstation_domain.proto";
import "domain/weatherstation_extremes.proto";
import "domain/weatherstation_publish.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";



package be.reaktika.weatherstation.ports.geocoding;

message GeoCodingState {
  map<string,string> stationIdToCountry = 1;
}



//events
message CountryMeasurements {
  string country = 1;
  repeated be.reaktika.weatherstation.domain.TemperatureMeasurement temperatures = 3;
  repeated be.reaktika.weatherstation.domain.WindspeedMeasurement windspeeds = 4;
}



service GeoCodingEntityService {
  rpc RegisterData(be.reaktika.weatherstation.domain.AddToAggregationCommand) returns (google.protobuf.Empty);

}