syntax = "proto3";

package be.reaktika.domain;

import "google/protobuf/timestamp.proto";
import "akkaserverless/annotations.proto";

option java_outer_classname = "WeatherStationDomain";

option (akkaserverless.file).event_sourced_entity = {
    name: "WeatherStation"
    entity_type: "weatherstation"
    state: "WeatherStationState"
    events: "StationRegistered"
    events: "TemperaturesCelciusAdded"
    events: "WindspeedsAdded"
};


message WeatherStationState {
    string station_id = 1;
    string station_name = 2;
    double latitude = 3;
    double longitude = 4;
    double average_temp_celcius_overall = 5;
    double average_windspeed_overall = 6;
}

message StationRegistered {
    string station_id = 1;
    string station_name = 2;
    double latitude = 3;
    double longitude = 4;
}

message TemperaturesCelciusAdded {
    string station_id = 1;
    repeated Temperature temperature = 2;
}

message Temperature {
    google.protobuf.Timestamp measurement_time = 1;
    float temperature_celcius = 2;
}

message WindspeedsAdded {
    string station_id = 1;
    repeated Windspeed windspeed = 2;
}

message Windspeed {
    google.protobuf.Timestamp measurement_time = 1;
    float windspeed_m_per_s = 2;
}


